--- a/index.html
+++ b/index.html
@@ -17,10 +17,29 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <img src="https://images.pexels.com/photos/3820509/pexels-photo-3820509.jpeg" width="100" height="100" alt="a gray rabbit"> </img>
+    <img src="https://images.pexels.com/photos/457882/pexels-photo-457882.jpeg" width="100" height="100" alt="a gray rabbit"> </img>
     <h1>Welcome to a Landing Page</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
-    <button>Buy our stuff</button>
+    <button>Shop Now</button>
+  </section>
+
+  <!-- About Us Section -->
+  <section class="about-us">
+    <div class="about-container">
+      <!-- Left column: About Us text -->
+      <div class="about-left">
+        <h2>About Us</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Pellentesque euismod, nisi eu consectetur consectetur, 
+          nisl nisi consectetur nisi, euismod euismod nisi nisi euismod.
+        </p>
+      </div>
+      <!-- Right column: Placeholder image -->
+      <div class="about-right">
+        <img src="https://via.placeholder.com/150" alt="Placeholder image">
+      </div>
+    </div>
   </section>
 
 </body>
