Refactor navbar and hero section; enhance styles and layout for better responsiveness

--- a/index.html
+++ b/index.html
@@ -10,18 +10,42 @@
   <!-- Navbar -->
   <nav>
     <ul>
-      <li><a href="#">Logo</a></li>
-      <li><a href="#">Home</a></li>
+      <li>
+        <img src="https://github.com/oscallen-creator/04-Walk-Through/blob/main/charitywater_logo_horizontal_WhiteText%20(1).png?raw=true" alt="Logo" style="height:18px; width:auto; vertical-align: middle; margin-right: 8px;">
+      </li>
+    <li><a href="#">Our Mission</a></li>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Donate Now</a></li>
+    <li><a href="#">Contact Us</a></li>
     </ul>
   </nav>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <img src="https://images.pexels.com/photos/457882/pexels-photo-457882.jpeg" width="100" height="100" alt="a gray rabbit"> </img>
-    <h1>Welcome to a Landing Page</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
-    <button>Shop Now</button>
+  <!-- Large Section with Background Image -->
+  <section class="large-bg-section">
+    <div class="cta-dock">
+      <h1>Fuel Change.</h1>
+      <h1>Clean Water.</h1>
+      <h1>DONATE NOW</h1>
+  <button class="cta-donate-btn">Donate Here</button>
+    </div>
   </section>
+
+  <!-- Hero Section -->
+  <section class="hero-section">
+    <div class="hero-content">
+      <div class="hero-image">
+        <img src="https://cdn2.dropmarkusercontent.com/52043/004434ba4e03f8da3afd02df6ae33a44e1d230c894dc4d65788af643b7b02473/preview/7255_Ethiopia_2019_CG-.jpg?Expires=1757184524&Signature=lStZ0Xiqf~tFzYc24YZ~QrSRt4i-MJILv0xJMdbDVrf8Uc2v8W7M0WdVsCR4SyClE3jvSP1gxfzPOWqgm0DxtujsA38m9VfvAr27ZoLN0VtmfJW5uvHpjYzvka2ifTWkBBK5qqLF~LrhNoNjj237Nqy3QVEE-3sq0IhWdZEQppxmZ9iMGqgLFDiO~DLwtrYlQbQXO5HRKQy4blgXxlh9jDX9lfS4PP9zU2hYKLLqnogcGByQwrfNKsM8R0ARsqh8VvDnQAfVekQie1aq-et2AbARjDf8CRxIyQ~J5DDGc2rfS-DVH-o58pY74XI465fk8osa8ivtxKc~g8b5kegPWQ__&Key-Pair-Id=APKAITQYWVEN757ZA4KQ" alt="WomanImage">
+      </div>
+      <div class="hero-image">
+        <img src="https://cdn2.dropmarkusercontent.com/52043/1949e4436567a4dced4fecfe637f6e9ae867735b91276f4a93bd5d6d3234cd84/preview/4692_Ethiopia_2019_CG-.jpg?Expires=1757185267&Signature=QVP-AjUvJFTOaDal97I8H55L2HrDQe-Aahqcif-E1b8Q5rtgNNaoFGO2qLFMLEspO-XeFtcdjMa1tjhxRiVVujvHcdGFmgXhrLQROEfwF0VGtHyBvW2DbLfBgxocxIfkpv8C9hRmWbNtSzKDrn4n14Cue9en1DV1XQkrdokjYaDaxpz1ArQLCtt7~1F8jFegiWKwQ-9rHNOfUhtRf9ulbHXpTTuE2SCCZAyQGdgh2f~~j4aR9oO373AH5~~4etUxDQHVAxZXe91ftbxIPChHiikBOm1aYdkp1iQm4mkPMIjjAzunZaT7sEAqFc~9T2STdvbiBTMzizY~lq~NmVliAg__&Key-Pair-Id=APKAITQYWVEN757ZA4KQ" alt="Second placeholder image">
+      </div>
+      <div class="hero-bottom-right">
+        <h2 style="color: #fff; font-family: Georgia, serif; text-align: right;">About Us</h2>
+        <p style="color: #e3a54b; font-family: Georgia, serif; text-align: right;">Charity: water is a nonprofit dedicated to ending the global water crisis by bringing clean, safe drinking water to people in need. Since 2006, we’ve funded over 186,000 projects in 29 countries, transforming the lives of more than 20 million people. We work with local partners to build sustainable, community-owned water solutions, and every public donation goes directly to the field. Clean water changes everything—improving health, education, equality, and opportunity—and we’re committed to making that change for everyone, everywhere.</p>
+      </div>
+    </div>
+  </section>
+
 
   <!-- About Us Section -->
   <section class="about-us">
@@ -37,7 +61,7 @@
       </div>
       <!-- Right column: Placeholder image -->
       <div class="about-right">
-        <img src="https://via.placeholder.com/150" alt="Placeholder image">
+        <img src="https://github.com/oscallen-creator/04-Walk-Through/blob/main/charitywater_logo_vertical_AllBlack.png?raw=true" alt="Placeholder image">
       </div>
     </div>
   </section>
